--- a/portfolio.html
+++ b/portfolio.html
@@ -15,16 +15,16 @@
         <nav>
             <ul>
                 <li>
-                    <a href="home.html"></a> Home
+                   Home
                 </li>
                 <li>
-                    <a href="about.html"></a> About
+                   About
                 </li>
                 <li>
-                    <a href="portfolio.html"></a> Portfolio
+                   Portfolio
                 </li>
                 <li>
-                    <a href="contact.html"></a> Contact
+                  Contact
                 </li>
             </ul>
         </nav>
